<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/event_calendar_symbol" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/edtxtHintColor"
                app:hintTextAppearance="@style/textInputLabel"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginEnd="2dp">

                <EditText
                    android:id="@+id/edtxtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColorHint="@color/edtxtHintColor"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/edtxtHintColor"
                app:hintTextAppearance="@style/textInputLabel"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginEnd="2dp"
                android:hint="@string/hint_password">

                <EditText
                    android:id="@+id/edtxtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColorHint="@color/edtxtHintColor"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:inputType="textPassword"
                    android:hint="" />
            </android.support.design.widget.TextInputLayout>

            <!-- Login Button -->

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/login_btn_selector"
                android:text="@string/btn_login"
                android:textColor="@drawable/login_btn_text_color_selector" />

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:visibility="gone"
                android:textColor="@color/colorPrimary" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>